--- a/openwrt-luci-bootstrap-dark.user.css
+++ b/openwrt-luci-bootstrap-dark.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           OpenWrt LuCI Bootstrap - dark
 @namespace      github.com/teohhanhui
-@version        0.1.0
+@version        0.1.1
 @description    A userstyle to make OpenWrt LuCI's (default) Bootstrap theme dark
 @author         Teoh Han Hui <teohhanhui@gmail.com>
 @homepageURL    https://github.com/teohhanhui/openwrt-luci-bootstrap-dark
@@ -11,6 +11,9 @@
 ==/UserStyle== */
 @-moz-document domain("openwrt.lan"),
 domain("192.168.1.1") {
+  /*
+   * cascade.css
+   */
   /* L84 */
   body {
     background-color: #222;
@@ -49,7 +52,7 @@ domain("192.168.1.1") {
   /* L749 */
   .tabs,
   .cbi-tabmenu {
-    background: linear-gradient(#222 28px, #444 28px);
+    background-image: linear-gradient(#222 28px, #444 28px);
   }
 
   /* L851 */
@@ -59,6 +62,7 @@ domain("192.168.1.1") {
 
   /* L1192 */
   .cbi-progressbar {
+    border: 1px solid #555;
     background: #282828;
   }
 
@@ -84,23 +88,22 @@ domain("192.168.1.1") {
   /* L1439 */
   .ifacebox {
     background-color: #222;
+    border: 1px solid #555;
     background-image: linear-gradient(#222, #222 25%, #282828);
     text-shadow: 0 1px 1px rgba(34, 34, 34, 0.75);
   }
 
   /* L1454 */
   .ifacebox .ifacebox-head {
+    border-bottom: 1px solid #555;
     color: #404040;
-  }
-
-  /* L1459 */
-  .ifacebox .ifacebox-head.active {
-    color: #404040;
+    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
   }
 
   /* L1465 */
   .ifacebadge {
     background-color: #222;
+    border: 1px solid #555;
     background-image: linear-gradient(#222, #222 25%, #282828);
     text-shadow: 0 1px 1px rgba(34, 34, 34, 0.75);
   }
@@ -109,5 +112,29 @@ domain("192.168.1.1") {
   .modal,
   #modal_overlay > .modal {
     background: #222;
+  }
+
+
+  /*
+   * mobile.css
+   */
+  @media screen and (max-device-width: 600px) {
+    /* L9 */
+    .tabs,
+    .cbi-tabmenu {
+      background-image: linear-gradient(#222 20%, #444 100%);
+    }
+
+    /* L29 */
+    .tr {
+      border-top: 1px solid #444;
+    }
+
+    /* L38 */
+    .table .th,
+    .table .td,
+    .table .tr::before {
+      border-top: none;
+    }
   }
 }
