--- a/openwrt-luci-bootstrap-dark.user.css
+++ b/openwrt-luci-bootstrap-dark.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           OpenWrt LuCI Bootstrap - dark
 @namespace      github.com/teohhanhui
-@version        0.1.3
+@version        0.1.4
 @description    A userstyle to make OpenWrt LuCI's (default) Bootstrap theme dark
 @author         Teoh Han Hui <teohhanhui@gmail.com>
 @homepageURL    https://github.com/teohhanhui/openwrt-luci-bootstrap-dark
@@ -54,7 +54,6 @@ domain("192.168.1.1") {
   /* L235 */
   pre {
     background-color: #2c2c2c;
-    border-color: rgba(34, 34, 34, 0.15);
   }
 
   /* L251 */
@@ -118,7 +117,6 @@ domain("192.168.1.1") {
 
   /* L1175 */
   .cbi-tooltip {
-    box-shadow: 0 0 2px #555;
     background-color: #222;
   }
 
@@ -131,11 +129,7 @@ domain("192.168.1.1") {
   /* L1207 */
   .cbi-progressbar::after {
     text-shadow: 0 0 2px #222;
-  }
-
-  /* L1220 */
-  .zonebadge .cbi-tooltip {
-    box-shadow: 0 0 3px #ddd;
+    mix-blend-mode: difference;
   }
 
   /* L1349 */
@@ -161,34 +155,34 @@ domain("192.168.1.1") {
 
   /* L1439 */
   .ifacebox {
-    background-color: #222;
     border-color: #555;
-    background-image: none;
     background-image: linear-gradient(#222, #222 25%, #282828);
-    text-shadow: 0 1px 1px rgba(34, 34, 34, 0.75);
+    text-shadow: none;
   }
 
   /* L1454 */
   .ifacebox .ifacebox-head {
     border-bottom-color: #555;
     color: #404040;
-    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
   }
 
   /* L1465 */
   .ifacebadge {
-    background-color: #222;
     border-color: #555;
-    background-image: none;
     background-image: linear-gradient(#222, #222 25%, #282828);
-    text-shadow: 0 1px 1px rgba(34, 34, 34, 0.75);
-    box-shadow: inset 0 1px 0 rgba(34, 34, 34, 0.2), 0 1px 2px rgba(255, 255, 255, 0.05);
+    text-shadow: none;
     color: #fff;
   }
 
   /* L1549 */
   .zonebadge > .ifacebadge {
     color: #bbb;
+  }
+
+  /* L1570 */
+  div.cbi-value var.cbi-tooltip-container,
+  .td.cbi-value-field var.cbi-tooltip-container .cbi-tooltip {
+    color: #fff;
   }
 
   /* L1584 */
@@ -215,7 +209,6 @@ domain("192.168.1.1") {
   .modal,
   #modal_overlay > .modal {
     background-color: #222;
-    box-shadow: 0 0 3px #ddd;
   }
 
 
